removed routes for users
