# app.js
@@ -10,7 +10,6 @@ const swaggerDocument = require('./doc/swagger-output.json');
 const indexRouter = require('./routes/index');
 const tasksRouter = require('./routes/tasks');
 const authenticationRouter = require('./routes/authentication');
-const usersRouter = require('./routes/users');
 
 const app = express();
 
@@ -34,7 +33,6 @@ app.use(express.static(path.join(__dirname, 'public')));
 app.use('/', indexRouter);
 app.use('/tasks', tasksRouter);
 app.use('/authentication', authenticationRouter);
-app.use('/users', usersRouter);
 
 app.use('/api-docs', swaggerUi.serve);
 app.get('/api-docs', swaggerUi.setup(swaggerDocument));
